objects/EOF_EAI_Service_Log__c.object
<CustomObject>
    <fields>
        <fullName>Accordo_Operativo__c</fullName>
        <label>Accordo Operativo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>EAI Service Logs</relationshipLabel>
        <relationshipName>EAI_Service_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Banda_Interfaccia__c</fullName>
        <label>Banda</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COS1_CIR__c</fullName>
        <label>COS1_CIR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COS1_PIR__c</fullName>
        <label>COS1_PIR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COS3_CIR__c</fullName>
        <label>COS3_CIR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COS3_PIR__c</fullName>
        <label>COS3_PIR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COS5_CIR__c</fullName>
        <label>COS5_CIR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COS5_PIR__c</fullName>
        <label>COS5_PIR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseNumber__c</fullName>
        <label>CaseNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caso__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Caso</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>EAI Service Logs (Caso)</relationshipLabel>
        <relationshipName>EAI_Service_Logs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Causale_Scarto__c</fullName>
        <label>Causale_Scarto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Causale_Sospensione__c</fullName>
        <label>Causale_Sospensione</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>Sede OLO/CLIENTE FINALE inaccessibile</fullName>
                </value>
                <value>
                    <fullName>Cliente Irreperibile</fullName>
                </value>
                <value>
                    <fullName>Cliente Indisponibile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Codice_Comunicazione_OLO__c</fullName>
        <label>Codice Comunicazione OLO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_Ordine_SFDC__c</fullName>
        <label>Codice Ordine SFDC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_Ordine_SO__c</fullName>
        <label>Codice Ordine SO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_Ordine_Ticket_Provisioning__c</fullName>
        <externalId>true</externalId>
        <label>Codice Ordine Ticket Provisioning</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDateMeno1__c</fullName>
        <formula>CreatedDate -(1/1440)</formula>
        <label>CreatedDate-1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CreatedDatePiu1__c</fullName>
        <formula>CreatedDate+(1/1440)</formula>
        <label>CreatedDate+1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DATA_ORA_CREAZIONE_TTM__c</fullName>
        <label>DATA ORA CREAZIONE TTM</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Descrizione_Evento_Risoluzione__c</fullName>
        <label>Descrizione Evento Risoluzione</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Risolto: Tratta Verticale</fullName>
                </value>
                <value>
                    <fullName>Risolto Tratta Orizzontale: Centrale</fullName>
                </value>
                <value>
                    <fullName>Risolto Tratta Orizzontale: Rete Primaria</fullName>
                </value>
                <value>
                    <fullName>Risolto Tratta Orizzontale: Rete Secondaria</fullName>
                </value>
                <value>
                    <fullName>Non Riscontrato: Senza Uscita</fullName>
                </value>
                <value>
                    <fullName>Non Riscontrato: Con Uscita</fullName>
                </value>
                <value>
                    <fullName>Risolto: Sbraccio</fullName>
                </value>
                <value>
                    <fullName>Risolto: Borchia Ottica</fullName>
                </value>
                <value>
                    <fullName>Non Risolvibile: Causa Impianto Cliente</fullName>
                </value>
                <value>
                    <fullName>Non Risolvibile: Causa CPE Cliente</fullName>
                </value>
                <value>
                    <fullName>Risolto OLO/CLIENTE: Configurazione CPE/ONT Cliente</fullName>
                </value>
                <value>
                    <fullName>Risolto OLO/CLIENTE: Sostituzione CPE Cliente</fullName>
                </value>
                <value>
                    <fullName>Risolto OLO/CLIENTE: Sostituzione ONT Cliente</fullName>
                </value>
                <value>
                    <fullName>Risolto OLO/CLIENTE: Reset CPE/ONT Cliente</fullName>
                </value>
                <value>
                    <fullName>Risolto OLO/CLIENTE: Sostituzione Bretella Ottica</fullName>
                </value>
                <value>
                    <fullName>Ribaltamento Effettuato</fullName>
                </value>
                <value>
                    <fullName>Non Risolvibile: Problemi Di Rete OLO (Es. Problema di Scheda In Centrale OLO, Problema Di Configurazione OLO)</fullName>
                </value>
                <value>
                    <fullName>Non Risolvibile: Problemi Di Rete Cliente (Es. Wi-Fi Poco Performante Causa Disposizione Casa Cliente, Configurazione PC)</fullName>
                </value>
                <value>
                    <fullName>Risolto Mediante Intervento Congiunto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Durata_Evento__c</fullName>
        <label>Durata Evento (mesi)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EOF_APPARATO__c</fullName>
        <label>Apparato</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_CAUSALE_APPARATO__c</fullName>
        <label>EOF_CAUSALE_APPARATO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_CAUSALE_RICHIESTA_ANNULLAMENTO__c</fullName>
        <label>Causale Richiesta Annullamento</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_CLUSTER_PROMOZIONE__c</fullName>
        <label>Cluster Promozione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_CODICE_MOTIVAZIONE__c</fullName>
        <label>Codice Motivazione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_CODICE_PROGETTO_SPECIALE__c</fullName>
        <label>Codice Progetto Speciale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_CODICE_RICHIESTA_ANNULLAMENTO__c</fullName>
        <label>Codice Richiesta Annullamento</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_COGNOME_REFERENTE_TECNICO_OLO__c</fullName>
        <label>Cognome Referente Tecnico OLO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_COLLEGAMENTO_P2P__c</fullName>
        <label>Collegamento P2P</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_COgnome_CLiente__c</fullName>
        <label>Cognome Cliente</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Categoria_Guasto__c</fullName>
        <label>EOF_Categoria_Guasto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>Disservizio</fullName>
                </value>
                <value>
                    <fullName>Degrado</fullName>
                </value>
                <value>
                    <fullName>Post Provisioning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EOF_Causale_Apertura__c</fullName>
        <label>EOF_Causale_Apertura</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EOF_Causale_Desospensione__c</fullName>
        <label>EOF_Causale_Desospensione</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EOF_Causale_Errore__c</fullName>
        <label>Causale Errore</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EOF_Cod_Rifiuto_Sospensione_Annullamento__c</fullName>
        <label>Codice Rifiuto Sospensione Annullamento</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Codice_Comunicazione_OLO__c</fullName>
        <label>Codice Comunicazione OLO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Codice_Errore__c</fullName>
        <label>Codice Errore</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Codice_Motivazione_Rimodulazione__c</fullName>
        <label>Codice Motivazione Rimodulazione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Codice_Operatore__c</fullName>
        <label>Codice Operatore</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Codice_Ordine_EOF__c</fullName>
        <label>Codice Ordine EOF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Codice_Ordine_OLO__c</fullName>
        <label>Codice Ordine OLO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Comune__c</fullName>
        <label>Comune</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Comunicazioni_con_OLO__c</fullName>
        <label>Comunicazioni con OLO</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EOF_DATA_PREVISTA_ATTIVAZIONE__c</fullName>
        <label>Data Prevista Attivazione</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EOF_Data_Espletamento_Ordine__c</fullName>
        <label>Data Espletamento Ordine</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EOF_Data_Notifica_FORMULA__c</fullName>
        <formula>IF ( DATEVALUE(EOF_Data_Notifica__c) &gt;= 
DATE ( YEAR (DATEVALUE(EOF_Data_Notifica__c)),3,1) 
+ 
( 
14- 
CASE( MOD(DATE ( YEAR (DATEVALUE(EOF_Data_Notifica__c)),3,1) - DATE (1900,1,7),7) , 
0,7,MOD(DATE ( YEAR (DATEVALUE(EOF_Data_Notifica__c)),3,1) - DATE (1900,1,7),7)) 
) 
&amp;&amp; 
DATEVALUE(EOF_Data_Notifica__c) &lt; 
DATE ( YEAR (DATEVALUE(EOF_Data_Notifica__c)),11,1) 
+ 
( 
7- 
CASE( MOD(DATE ( YEAR (DATEVALUE(EOF_Data_Notifica__c)),11,1) - DATE (1900,1,7),7) , 
0,7,MOD(DATE ( YEAR (DATEVALUE(EOF_Data_Notifica__c)),11,1) - DATE (1900,1,7),7)) 
), 
LEFT ( TEXT (EOF_Data_Notifica__c+ 2/24 ), 19), 
LEFT ( TEXT (EOF_Data_Notifica__c+ 1/24), 19) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Notifica FORMULA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Data_Notifica_String__c</fullName>
        <label>Data Notifica</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Data_Notifica__c</fullName>
        <label>Data Notifica</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EOF_Data_Ora_Autoripristinato__c</fullName>
        <label>EOF_Data_Ora_Autoripristinato</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EOF_Data_Ora_Creazione__c</fullName>
        <label>EOF_Data_Ora_Creazione</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EOF_Data_Ora_Desospensione__c</fullName>
        <label>EOF_Data_Ora_Desospensione</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EOF_Data_Ora_Inizio_Guasto__c</fullName>
        <label>EOF_Data_Ora_Inizio_Guasto</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EOF_Data_Ora_Intervento_Congiunto__c</fullName>
        <label>EOF_Data_Ora_Intervento_Congiunto</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EOF_Data_Ora_Notifica_Annullamento__c</fullName>
        <label>EOF_Data_Ora_Notifica_Annullamento</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EOF_Data_Ora_Notifica_Chiusura__c</fullName>
        <label>EOF_Data_Ora_Notifica_Chiusura</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EOF_Data_Ora_Notifica_Desospensione__c</fullName>
        <label>EOF_Data_Ora_Notifica_Desospensione</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EOF_Data_Ora_Notifica_Sospensione__c</fullName>
        <label>EOF_Data_Ora_Notifica_Sospensione</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EOF_Data_Ora_Richiesta_Annullamento__c</fullName>
        <label>EOF_Data_Ora_Richiesta_Annullamento</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EOF_Data_Ora_Scarto__c</fullName>
        <label>EOF_Data_Ora_Scarto</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EOF_Data_Provisioning_Servizio__c</fullName>
        <label>Data Provisioning Servizio</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EOF_Descrizione_Causale_Scarto__c</fullName>
        <label>EOF_Descrizione_Causale_Scarto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Descrizione_Problema__c</fullName>
        <label>EOF_Descrizione_Problema</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EOF_EMAIL_REFERENTE_TECNICO_OLO__c</fullName>
        <label>Email Referente Tecnico OLO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Esito_Consegna_Apparato__c</fullName>
        <label>Esito Consegna Apparato</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Flag_Pagamento__c</fullName>
        <label>Flag Pagamento</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_GPON_Attestazione__c</fullName>
        <label>GPON Attestazione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_GPON_VINCOLANTE__c</fullName>
        <label>GPON Vincolante</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_ID_BUILDING__c</fullName>
        <label>ID Building</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_ID_Case_Temp__c</fullName>
        <label>Id Case Temporaneo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_ID_Notifica__c</fullName>
        <label>ID Notifica</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_ID_Pop__c</fullName>
        <label>Identificativo del POP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_ID_Risorsa__c</fullName>
        <label>ID Risorsa</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_ID_SERVIZIO__c</fullName>
        <label>ID Servizio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_ID_Splitter_Secondario__c</fullName>
        <label>ID Splitter Secondario</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_INDIRIZZO__c</fullName>
        <label>Indirizzo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_INFORMAZIONI_LOGISTICA_APPARATI__c</fullName>
        <label>Informazioni Logistica Apparati</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Intervento_Congiunto__c</fullName>
        <label>Intervento Congiunto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EOF_MOTIVAZIONE__c</fullName>
        <label>Motivazione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_MOT_RIFIUTO_SOSPENSIONE_ANNULLAMENTO__c</fullName>
        <label>Motivo Rifiuto Sospensione Annullamento</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Motivazione_Rimodulazione__c</fullName>
        <label>Motivazione Rimodulazione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_NOME_REFERENTE_TECNICO_OLO__c</fullName>
        <label>Nome Referente Tecnico OLO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_NOTA_SITO__c</fullName>
        <label>Nota Sito</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_NOTE_CLIENTE__c</fullName>
        <label>NOTE CLIENTE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_NOTE__c</fullName>
        <label>Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_NUMERO_CIVICO__c</fullName>
        <label>Numero Civico</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_NUMERO_TELEFONICO_PRINCIPALE_LINEA__c</fullName>
        <label>Numero Telefonico Principale Linea</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Nome_Cliente__c</fullName>
        <label>Nome Cliente</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Numero_Operatore__c</fullName>
        <label>Numero Operatore</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Nuova_DAC__c</fullName>
        <label>Nuova DAC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EOF_OPZIONE_SYSTEM_UNICO__c</fullName>
        <label>Opzione System Unico</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_ORARIO_APPUNTAMENTO__c</fullName>
        <label>Orario Appuntamento</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Ordine_Invio_OLO__c</fullName>
        <label>Ordine Invio OLO</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EOF_PARTICELLA_TOPONOMASTICA__c</fullName>
        <label>Particella Toponomastica</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_PASSWORD_APPARATO__c</fullName>
        <label>Password Apparato</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_PIN_INTERVENTO_A_VUOTO__c</fullName>
        <label>Pin Intervento A Vuoto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_PROFILO__c</fullName>
        <label>Profilo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_PROGETTO_SPECIALE__c</fullName>
        <label>Progetto Speciale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_PROMOZIONE__c</fullName>
        <label>Promozione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Parametri_Trasmissivi_Ottici__c</fullName>
        <label>Parametri Trasmissivi Ottici</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Posizione_Splitter_Secondario__c</fullName>
        <label>Posizione Splitter Secondario</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Provincia__c</fullName>
        <label>Provincia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_RECAPITO_TELEFONICO_CLIENTE_1__c</fullName>
        <label>Recapito Telefonico Cliente 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_RECAPITO_TELEFONICO_CLIENTE_2__c</fullName>
        <label>Recapito Telefonico Cliente 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_RECAPITO_TELEFONICO_CLIENTE__c</fullName>
        <label>Recapito Telefonico Cliente</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_RECAPITO_TEST_LINEA__c</fullName>
        <label>Recapito Test Linea</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Referente_desospensione__c</fullName>
        <label>EOF_Referente_desospensione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Response__c</fullName>
        <label>Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Retry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EOF_Richiesta_Notifica__c</fullName>
        <label>Richiesta/Notifica</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EOF_Rischedulazione_Appuntamento__c</fullName>
        <label>EOF_Rischedulazione_Appuntamento</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EOF_SCALA_PALAZZINA__c</fullName>
        <label>Scala Palazzina</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_SITO__c</fullName>
        <label>Sito</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_SLA_DATE__c</fullName>
        <label>Sla Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_SLA_PREMIUM_ASSURANCE__c</fullName>
        <label>Sla Premium Assurance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_SL_Riferimento__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SL Riferimento</label>
        <referenceTo>EOF_EAI_Service_Log__c</referenceTo>
        <relationshipLabel>EAI Service Logs (SL Riferimento)</relationshipLabel>
        <relationshipName>EAI_Service_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EOF_SORGENTE__c</fullName>
        <label>Sorgente</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_STATO_ORDINE__c</fullName>
        <label>Stato Ordine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Stato_Richiesta__c</fullName>
        <label>Stato Richiesta</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Stato_Ticket__c</fullName>
        <label>Stato Ticket</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_TELEFONO_REFERENTE_OLO_ONFIELD_NOTEC__c</fullName>
        <label>Telefono Referente OLO OnField NoTech</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_TELEFONO_REFERENTE_TECNICO_OLO__c</fullName>
        <label>Telefono Referente Tecnico OLO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_TIPOLOGIA_APPARATO__c</fullName>
        <label>Tipologia Apparato</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_TIPOLOGIA_SERVIZIO__c</fullName>
        <label>Tipologia Servizio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_TRACCIATO__c</fullName>
        <label>Tracciato</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Tec_Eof__c</fullName>
        <label>EOF_Tec_Eof</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Tec_OLO__c</fullName>
        <label>Tec_OLO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Tel_Tec_Eof__c</fullName>
        <label>EOF_Tel_Tec_Eof</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Tel_Tec_OLO__c</fullName>
        <label>Tel_Tec_OLO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Tipo_Comunicazione_Int__c</fullName>
        <label>Codice Tipo Comunicazione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Tipo_Comunicazione_String__c</fullName>
        <label>Tipo Comunicazione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Tipo_Comunicazione__c</fullName>
        <label>Tipo Comunicazione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Verifica_apparato_cliente__c</fullName>
        <label>EOF_Verifica_apparato_cliente</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Elenco_Kit__c</fullName>
        <label>Elenco Kit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Sede_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sede Master</label>
        <referenceTo>EOF_EAI_Service_Log__c</referenceTo>
        <relationshipLabel>EAI Service Logs (EAI Service Log)</relationshipLabel>
        <relationshipName>EAI_Service_Logs4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ID_Sede__c</fullName>
        <formula>EOF_Codice_Operatore__c +&apos;_Sede_&apos;+ NumberSede__c</formula>
        <label>ID Sede</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interfaccia_CPE__c</fullName>
        <label>Interfaccia CPE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ottica</fullName>
                </value>
                <value>
                    <fullName>Elettrica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Modello_di_Servizio__c</fullName>
        <label>Modello di Servizio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NS_Rif__c</fullName>
        <label>NS. Rif.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nome_POP_Openfiber__c</fullName>
        <label>Nome POP Openfiber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nome_del_KIT__c</fullName>
        <label>Nome KIT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_Sospensione_Operatore__c</fullName>
        <label>Note Sospensione Operatore</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notify__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notify</label>
        <referenceTo>EOF_Notify__c</referenceTo>
        <relationshipLabel>EAI Service Logs</relationshipLabel>
        <relationshipName>EAI_Service_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NumberSede__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>NumberSede</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>OF_Bretella_Ottica__c</fullName>
        <label>OF_Bretella_Ottica</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Codice_Operatore_Secondario__c</fullName>
        <label>OF_Codice_Operatore_Secondario</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Estensione_Impianto_Effettuata__c</fullName>
        <label>OF_Estensione_Impianto_Effettuata</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Estensione_Impianto__c</fullName>
        <label>OF_Estensione_Impianto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Flag_Desospensione__c</fullName>
        <label>OF_Flag_Desospensione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Id_Borchia__c</fullName>
        <label>Id Borchia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Id_Comune__c</fullName>
        <description>Campo per salvare id comune</description>
        <label>OF_Id_Comune</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_LastModifiedValue__c</fullName>
        <formula>IF(Caso__r.LastModifiedDate &gt; NOW()-15, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OF_LastModifiedValue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Metri_TOT__c</fullName>
        <label>OF_Metri_TOT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_NomeKit_From_Coll__c</fullName>
        <formula>IF (ISBLANK(OF_PP_KIT_Log__c) ,  kit_in_condivisione__r.PO_P2PAttiva_Nome_del_KIT__c,
				    OF_PP_KIT_Log__r.PO_P2PAttiva_Nome_del_KIT__c
				    	
			)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OF_NomeKit_From_Coll</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_NomeKit__c</fullName>
        <formula>IF( ISBLANK(Caso__r.Id)  , PO_P2PAttiva_Nome_del_KIT__c, Caso__r.PO_PP_NomeKit__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OF_NomeKit</label>
        <type>Text</type>
    </fields>
</CustomObject>